add remote data layer with network manager

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,6 +17,9 @@ location = "21.2.0"
 material = "1.11.0"
 timber = "5.0.1"
 
+retrofit = "2.9.0"
+retrofit-logger = "4.12.0"
+
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -40,6 +43,9 @@ androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 android-gms = { group = "com.google.android.gms", name = "play-services-location", version.ref = "location" }
 timber = { group = "com.jakewharton.timber", name = "timber", version.ref = "timber" }
+retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
+retrofit-converter = { group = "com.squareup.retrofit2", name = "converter-moshi", version.ref = "retrofit" }
+retrofit-logger = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "retrofit-logger" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
