add remote data layer with network manager

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,6 +16,8 @@ appcompat = "1.6.1"
 location = "21.2.0"
 material = "1.11.0"
 timber = "5.0.1"
+security = "1.1.0-alpha06"
+data-store = "1.0.0"
 
 retrofit = "2.9.0"
 retrofit-logger = "4.12.0"
@@ -32,6 +34,8 @@ mockito-inline = { group = "org.mockito", name = "mockito-inline", version.ref =
 kotlin-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-test", version.ref = "kotlin-test" }
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
 androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
+androidx-security = { group = "androidx.security", name = "security-crypto", version.ref = "security" }
+androidx-datastore = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "data-store" }
 androidx-ui = { group = "androidx.compose.ui", name = "ui" }
 androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
 androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
